# govsearch

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/govsearch/: __init__.py  cli.py  models.py  report.py
src/govsearch/analyzer/: __init__.py  citation.py  summarizer.py  timeline.py
src/govsearch/documents/: __init__.py  database.py  parser.py  types.py
src/govsearch/search/: __init__.py  engine.py  filters.py  indexer.py
tests/: test_analyzer.py  test_benchmark.py  test_cli.py  test_core.py  test_database.py  test_integration.py  test_models.py  test_parser.py  test_report.py  test_search.py  test_types.py
